--- a/slike i gif.html
+++ b/slike i gif.html
@@ -8,7 +8,7 @@
 <body class="drugapozadina">
 	<a href="new 1.html">Vrati me na prošlu stranicu</a>
 	<h1>Slike:</h1>
-		<img src="slike/vj10.01.png"/>
+		<img src="vj10.01.png"/>
 		<img src="slike/vj10.02.png"/>
 		<img src="slike/vj10.03.png"/>
 		<img src="slike/vj10.04.png"/>
