--- a/multimedija.html
+++ b/multimedija.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css.css"/>
 </head>
 <body class="drugapozadina">
-	<a href="new 1.html">Vrati me na prošlu stranicu</a>
+	<a href="index.html">Vrati me na prošlu stranicu</a>
 	<h1>Slike:</h1>
 		<img src="vj10_01.png"/>
 		<img src="vj10_02.png"/>
